# pumi-pic

./: .gitmodules  CMakeLists.txt  CSR_8hpp_source.html  CSR__buildFns_8hpp_source.html  CSR__input_8hpp_source.html  CSR__migrate_8hpp_source.html  CSR__rebuild_8hpp_source.html  Distribute_8h_source.html  Doxyfile  LICENSE  MemberTypeArray_8h_source.html  MemberTypeLibraries_8h_source.html  MemberTypes_8h_source.html  README.md  SCSPair_8h_source.html  SCS__Macros_8h_source.html  SCS__Types_8h_source.html  SCS__buildFns_8h_source.html  SCS__migrate_8h_source.html  SCS__rebuild_8h_source.html  SCS__sort_8h_source.html  SUPPORT.md  Segment_8h_source.html  SellCSigma_8h_source.html  SupportKK_8h_source.html  ViewComm_8h_source.html  ViewComm__gpu_8hpp_source.html  ViewComm__host_8hpp_source.html  annotated.html  cabm_8hpp_source.html  cabm__buildFns_8hpp_source.html  cabm__input_8hpp_source.html  cabm__migrate_8hpp_source.html  cabm__rebuild_8hpp_source.html  classes.html  classpumipic_1_1Array.html  classpumipic_1_1Array_3_01T_00_01Dim_00_01Dims_8_8_8_01_4-members.html  classpumipic_1_1Array_3_01T_00_01Dim_00_01Dims_8_8_8_01_4.html  classpumipic_1_1Array_3_01T_00_01Dim_01_4-members.html  classpumipic_1_1Array_3_01T_00_01Dim_01_4.html  (+289 more)
GITRm/: CMakeLists.txt  gitrm.cpp  square.geo
gitrm/: CMakeLists.txt  GitrmCoulombCollision.hpp  GitrmCrossDiffusion.hpp  GitrmInputOutput.cpp  GitrmIonizeRecombine.cpp  GitrmIonizeRecombine.hpp  GitrmMesh.cpp  GitrmMesh.hpp  GitrmParticles.cpp  GitrmParticles.hpp  GitrmPush.hpp  GitrmSurfaceModel.cpp  GitrmSurfaceModel.hpp  GitrmThermalForce.hpp
particle_structs/: CMakeLists.txt  Distribute.cpp  Distribute.h  Push.cpp  Push.h  README.md  SellCSigma.cpp  SellCSigma.h  main.cpp  psAssert.cpp  psAssert.h  psParams.h  psTypes.cpp  psTypes.h  pskk.cpp  run_pskk_loops.sh
particle_structs/algorithms/: Distribute.cpp  Distribute.h  Push.cpp  Push.h  psParams.h  psTypes.cpp  psTypes.h
particle_structs/cdash/: CTestConfig.cmake  Project.xml  nightly.cmake  nightly.sh
particle_structs/cmake/: bob.cmake  detect_kokkos_opts.cmake
particle_structs/scs/: SellCSigma.h
particle_structs/src/: CMakeLists.txt  SellCSigma.h  cabana_support.hpp  particle_structs.hpp  particle_structure.hpp  psMemberType.h  ps_call_fns.hpp  ps_for.hpp  team_policy.hpp  typeTest.cpp
particle_structs/support/: CMakeLists.txt  MemberTypeArray.h  MemberTypeLibraries.h  MemberTypes.h  PS_Macros.h  PS_Types.h  SCSPair.h  SCS_Macros.h  Segment.h  SellCSigma.cpp  SellCSigma.h  SupportKK.h  ViewComm.cpp  ViewComm.h  psAssert.cpp  psAssert.h  psView.h
particle_structs/test/: .nfs000000000002524200000056  CMakeLists.txt  Distribute.cpp  Distribute.h  buildSCSTest.cpp  destroy_cabm.cpp  destroy_csr.cpp  destroy_scs.cpp  destroy_test.cpp  device_default_test.cpp  initParticles.cpp  lambdaTest.cpp  migrateTest.cpp  migrate_cabm.cpp  migrate_csr.cpp  migrate_scs.cpp  policy.cpp  psParams.h  pskk.cpp  read_particles.hpp  rebuild.cpp  rebuild_cabm.cpp  rebuild_csr.cpp  rebuild_csr2.cpp  rebuild_scs.cpp  scanTest.cpp  scs_padding.cpp  smoke_test_particle.cpp  sortTest.cpp  test_cabm.cpp  test_csr.cpp  (+9 more)
performance_tests/: CMakeLists.txt  combo_format.py  compare.sh  gitrm_distribution.cpp  output_compare.py  output_convert.py  output_format.py  particle_structure_graphs.m  perfTypes.hpp  ps_combo.cpp  ps_combo160.cpp  ps_combo264.cpp  ps_combo268.cpp  ps_combo32.cpp  ps_combo36.cpp  ps_migrate160.cpp  ps_migrate268.cpp  ps_pseudopush.cpp  ps_rebuild.cpp  test_all.sh  test_combo.sh  test_largeE_largeP.sh  test_largeE_smallP.sh  test_particleToElmRatio.sh  test_push.sh  test_rebuild.sh  test_smallE_largeP.sh  test_smallE_smallP.sh
src/: CMakeLists.txt  GitrmInputOutput.cpp  GitrmInputOutput.hpp  GitrmIonizeRecombine.cpp  GitrmIonizeRecombine.hpp  GitrmMesh.cpp  GitrmMesh.hpp  GitrmParticles.cpp  GitrmParticles.hpp  GitrmPush.hpp  GitrmSurfaceModel.cpp  GitrmSurfaceModel.hpp  ParticleTracer.tpp  gitrm.cpp  gitrm_adjacency.hpp  gitrm_constants.hpp  gitrm_push.hpp  gitrm_utils.hpp  pumipic_adjacency.hpp  pumipic_adjacency.tpp  pumipic_comm.cpp  pumipic_comm.hpp  pumipic_constants.hpp  pumipic_file.cpp  pumipic_input.cpp  pumipic_input.hpp  pumipic_kktypes.cpp  pumipic_kktypes.hpp  pumipic_lb.cpp  pumipic_lb.hpp  pumipic_library.cpp  pumipic_library.hpp  pumipic_mesh.cpp  pumipic_mesh.hpp  pumipic_part_construct.cpp  pumipic_part_construct.hpp  pumipic_profiling.cpp  pumipic_profiling.hpp  pumipic_ptcl_ops.hpp  pumipic_push.hpp  (+13 more)
support/: CMakeLists.txt  SupportKK.h  ViewComm.cpp  ViewComm.h  ViewComm_cuda.hpp  ViewComm_gpu.hpp  ViewComm_host.hpp  ViewComm_test.cpp  ppArray.h  ppAssert.cpp  ppAssert.h  ppMacros.h  ppMemUsage.hpp  ppPrint.cpp  ppPrint.h  ppTiming.cpp  ppTiming.hpp  ppTypes.h  ppView.h  testing.cmake
test/: CMakeLists.txt  SCStest.cpp  borisMove.cpp  createParticles.cpp  dist2Bdry.cpp  dist2BdryPre.cpp  ellipticalPush.hpp  gyroScatter.hpp  loadSerialMesh.cpp  moller_trumbore_line_tri_test.cpp  neutralTracking.cpp  particleToMesh.cpp  print_classification.cpp  print_partition.cpp  pseudoPtclToMesh.cpp  pseudoPushAndSearch.cpp  pseudoXGCm.cpp  pseudoXGCmTypes.hpp  pseudoXGCm_scatter.cpp  search2d.cpp  test_ParticleTracer.cpp  test_adj.cpp  test_adjSearchPrecision.cpp  test_array.cpp  test_barycentric.cpp  test_chkpt.cpp  test_collision.cpp  test_collision_prev.cpp  test_comm_array.cpp  test_file.cpp  test_find_exit_face.cpp  test_find_exit_face_3D.cpp  test_full_mesh.cpp  test_input_construct.cpp  test_interpolate2d.cpp  test_lb.cpp  test_line_edge_2d.cpp  test_linetri_intersection.cpp  test_ptn_loading.cpp  test_push_and_search.cpp  (+7 more)
xgcm/: CMakeLists.txt  xgcm_elliptical_push.cpp  xgcm_gyro_scatter.cpp  xgcm_gyro_scatter.hpp  xgcm_input.cpp  xgcm_input.hpp  xgcm_mesh.cpp  xgcm_mesh.hpp  xgcm_particle.cpp  xgcm_particle.hpp  xgcm_push.hpp  xgcm_types.hpp
xgcp/: CMakeLists.txt  xgcp_elliptical_push.cpp  xgcp_gyro_scatter.cpp  xgcp_gyro_scatter.hpp  xgcp_input.cpp  xgcp_input.hpp  xgcp_mesh.cpp  xgcp_mesh.hpp  xgcp_particle.cpp  xgcp_particle.hpp  xgcp_push.hpp  xgcp_types.hpp
(+114 files in other folders)
