function(make_test exename srcname)
  add_executable(${exename} ${srcname})
  target_link_libraries(${exename} ${ALL_LIBS} Omega_h::omega_h)
endfunction(make_test)

make_test(print_partition print_partition.cpp)
make_test(print_classification print_classification.cpp)
make_test(full_mesh test_full_mesh.cpp)
make_test(ptn_loading test_ptn_loading.cpp)
make_test(comm_array test_comm_array.cpp)
make_test(barycentric test_barycentric.cpp)
make_test(linetri_intersection test_linetri_intersection.cpp)
make_test(pseudoPushAndSearch pseudoPushAndSearch.cpp)
make_test(input_construct test_input_construct.cpp)
make_test(search2d search2d.cpp)
make_test(pseudoXGCm pseudoXGCm.cpp)
make_test(pseudoXGCm_scatter pseudoXGCm_scatter.cpp)
make_test(loadSerialMesh loadSerialMesh.cpp)
make_test(XGCp xgcp.cpp)

#make_test(test_dist2bdry_preprocess test_dist2Bdry_preprocess.cpp)
make_test(borisMove borisMove.cpp)
make_test(neutralTracking neutralTracking.cpp)
make_test(SCStest SCStest.cpp)
include(testing.cmake)

bob_end_subdir()
